2016030131_Konstantinos_Danopoulos/myanalyzer.output
Nonterminals useless in grammar

    total_functions


Terminals unused in grammar

    KW_NIL


Rules useless in grammar

  147 total_functions: single_function
  148                | total_functions single_function


Rules useless in parser due to conflicts

    2 decl_list: %empty
    3          | const_decl
    4          | var_decl
    6          | const_decl var_decl


State 0 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 9 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 89 conflicts: 14 shift/reduce
State 122 conflicts: 14 shift/reduce
State 123 conflicts: 14 shift/reduce
State 124 conflicts: 14 shift/reduce
State 125 conflicts: 14 shift/reduce
State 126 conflicts: 14 shift/reduce
State 127 conflicts: 14 shift/reduce
State 128 conflicts: 14 shift/reduce
State 129 conflicts: 14 shift/reduce
State 130 conflicts: 8 shift/reduce
State 131 conflicts: 8 shift/reduce
State 132 conflicts: 8 shift/reduce
State 133 conflicts: 8 shift/reduce
State 134 conflicts: 8 shift/reduce
State 135 conflicts: 8 shift/reduce
State 174 conflicts: 1 shift/reduce
State 216 conflicts: 1 shift/reduce
State 219 conflicts: 14 shift/reduce
State 259 conflicts: 14 shift/reduce
State 260 conflicts: 14 shift/reduce
State 261 conflicts: 14 shift/reduce
State 262 conflicts: 14 shift/reduce
State 263 conflicts: 14 shift/reduce
State 264 conflicts: 14 shift/reduce
State 265 conflicts: 14 shift/reduce
State 266 conflicts: 14 shift/reduce
State 267 conflicts: 8 shift/reduce
State 268 conflicts: 8 shift/reduce
State 269 conflicts: 8 shift/reduce
State 270 conflicts: 8 shift/reduce
State 271 conflicts: 8 shift/reduce
State 272 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'

    2 decl_list: %empty
    3          | const_decl
    4          | var_decl
    5          | single_function
    6          | const_decl var_decl
    7          | const_decl single_function
    8          | var_decl single_function
    9          | const_decl var_decl single_function

   10 body: %empty
   11     | body code

   12 predefined_functions: IDENTIFIER ASSIGN KW_readString '(' ')' ';'
   13                     | IDENTIFIER ASSIGN KW_readInt '(' ')' ';'
   14                     | IDENTIFIER '[' calc ']' ASSIGN KW_readInt '(' ')' ';'
   15                     | IDENTIFIER ASSIGN KW_readReal '(' ')' ';'
   16                     | IDENTIFIER '[' calc ']' ASSIGN KW_readReal '(' ')' ';'
   17                     | KW_writeString '(' IDENTIFIER ')' ';'
   18                     | KW_writeString '(' CONSTANT_STRING ')' ';'
   19                     | KW_writeInt '(' calc ')' ';'
   20                     | KW_writeReal '(' calc ')' ';'

   21 code: predefined_functions
   22     | calculation
   23     | KW_IF '(' expr ')' execution_body ';'
   24     | KW_IF '(' expr ')' execution_body KW_ELSE '{' body '}' ';'
   25     | KW_IF '(' expr ')' execution_body eleif KW_ELSE '{' body '}' ';'
   26     | KW_FOR '(' calculation expr ';' calculation_not_semicolon ')' execution_body
   27     | KW_FOR '(' calculation calculation_not_semicolon ')' execution_body
   28     | KW_WHILE '(' expr ')' execution_body ';'
   29     | KW_BREAK ';'
   30     | KW_CONTINUE ';'
   31     | IDENTIFIER '(' call_func_var ')' ';'
   32     | IDENTIFIER ASSIGN IDENTIFIER '(' call_func_var ')' ';'
   33     | var_decl
   34     | return_action

   35 eleif: KW_ELSE_IF '(' expr ')' execution_body
   36      | eleif KW_ELSE_IF '(' expr ')' execution_body

   37 call_func_var: %empty
   38              | calc
   39              | call_func_var ',' calc

   40 execution_body: code
   41               | '{' body '}'

   42 calculation: IDENTIFIER ASSIGN calc ';'
   43            | IDENTIFIER '[' INTERGER_CONSTANT ']' ASSIGN calc ';'

   44 calculation_not_semicolon: IDENTIFIER ASSIGN calc

   45 calc: IDENTIFIER
   46     | '-' IDENTIFIER
   47     | IDENTIFIER '[' INTERGER_CONSTANT ']'
   48     | INTERGER_CONSTANT
   49     | FLOATING_POINT
   50     | CONSTANT_STRING
   51     | KW_TRUE
   52     | KW_FALSE
   53     | KW_NOT calc
   54     | calc '+' calc
   55     | calc '-' calc
   56     | calc STARSTAR calc
   57     | calc '*' calc
   58     | calc '/' calc
   59     | calc '%' calc
   60     | calc KW_AND calc
   61     | calc KW_OR calc
   62     | '(' calc ')'
   63     | calc ASSIGNASSIGN calc
   64     | calc NOTEQUAL calc
   65     | calc SMALLER calc
   66     | calc SMALLEREQUAL calc
   67     | calc BIGGER calc
   68     | calc BIGGEREQUAL calc

   69 expr: IDENTIFIER
   70     | '-' IDENTIFIER
   71     | INTERGER_CONSTANT
   72     | FLOATING_POINT
   73     | CONSTANT_STRING
   74     | KW_TRUE
   75     | KW_FALSE
   76     | expr '+' expr
   77     | expr '-' expr
   78     | expr STARSTAR expr
   79     | expr '*' expr
   80     | expr '/' expr
   81     | expr '%' expr
   82     | KW_NOT expr
   83     | expr KW_AND expr
   84     | expr KW_OR expr
   85     | expr ASSIGNASSIGN expr
   86     | expr NOTEQUAL expr
   87     | expr SMALLER expr
   88     | expr SMALLEREQUAL expr
   89     | expr BIGGER expr
   90     | expr BIGGEREQUAL expr
   91     | '(' expr ')'
   92     | IDENTIFIER '(' call_func_var ')'

   93 single_function: KW_FUNC IDENTIFIER '(' var_func_decl ')' func_type '{' body return_action '}' ';'

   94 var_func_decl: %empty
   95              | var_func_decl_2

   96 var_func_decl_2: single_var_func_decl
   97                | var_func_decl_2 ',' single_var_func_decl

   98 single_var_func_decl: IDENTIFIER KW_INT
   99                     | IDENTIFIER KW_REAL
  100                     | IDENTIFIER KW_STRING
  101                     | IDENTIFIER KW_BOOL
  102                     | IDENTIFIER '[' ']' KW_INT
  103                     | IDENTIFIER '[' ']' KW_REAL
  104                     | IDENTIFIER '[' ']' KW_STRING
  105                     | IDENTIFIER '[' ']' KW_BOOL

  106 return_action: KW_RETURN ';'
  107              | KW_RETURN calc ';'

  108 func_type: KW_INT
  109          | KW_REAL
  110          | KW_STRING
  111          | KW_BOOL
  112          | KW_VOID
  113          | '[' ']' KW_INT
  114          | '[' ']' KW_REAL
  115          | '[' ']' KW_STRING
  116          | '[' ']' KW_BOOL

  117 var_decl: single_var_decl
  118         | var_decl single_var_decl

  119 single_var_decl: KW_VAR list_decl KW_REAL ';'
  120                | KW_VAR list_decl KW_INT ';'
  121                | KW_VAR list_decl KW_STRING ';'
  122                | KW_VAR list_decl KW_BOOL ';'

  123 list_decl: single_decl
  124          | list_decl ',' single_decl

  125 single_decl: IDENTIFIER
  126            | IDENTIFIER '[' INTERGER_CONSTANT ']'
  127            | calculation_not_semicolon

  128 const_decl: single_line_const_decl
  129           | const_decl single_line_const_decl

  130 single_line_const_decl: KW_CONST list_real_assign KW_REAL ';'
  131                       | KW_CONST list_int_assign KW_INT ';'
  132                       | KW_CONST list_string_assign KW_STRING ';'
  133                       | KW_CONST list_bool_assign KW_BOOL ';'

  134 list_real_assign: real_assign_const
  135                 | list_real_assign ',' real_assign_const

  136 list_int_assign: int_assign_const
  137                | list_int_assign ',' int_assign_const

  138 list_string_assign: string_assign_const
  139                   | list_string_assign ',' string_assign_const

  140 list_bool_assign: bool_assign_const
  141                 | list_bool_assign ',' bool_assign_const

  142 real_assign_const: IDENTIFIER ASSIGN FLOATING_POINT

  143 int_assign_const: IDENTIFIER ASSIGN INTERGER_CONSTANT

  144 string_assign_const: IDENTIFIER ASSIGN CONSTANT_STRING

  145 bool_assign_const: IDENTIFIER ASSIGN KW_TRUE
  146                  | IDENTIFIER ASSIGN KW_FALSE


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 59 81
    '(' (40) 1 12 13 14 15 16 17 18 19 20 23 24 25 26 27 28 31 32 35 36 62 91 92 93
    ')' (41) 1 12 13 14 15 16 17 18 19 20 23 24 25 26 27 28 31 32 35 36 62 91 92 93
    '*' (42) 57 79
    '+' (43) 54 76
    ',' (44) 39 97 124 135 137 139 141
    '-' (45) 46 55 70 77
    '/' (47) 58 80
    ';' (59) 1 12 13 14 15 16 17 18 19 20 23 24 25 26 28 29 30 31 32 42 43 93 106 107 119 120 121 122 130 131 132 133
    '[' (91) 14 16 43 47 102 103 104 105 113 114 115 116 126
    ']' (93) 14 16 43 47 102 103 104 105 113 114 115 116 126
    '{' (123) 1 24 25 41 93
    '}' (125) 1 24 25 41 93
    error (256)
    ASSIGN (258) 12 13 14 15 16 32 42 43 44 142 143 144 145 146
    ASSIGNASSIGN (259) 63 85
    NOTEQUAL (260) 64 86
    SMALLER (261) 65 87
    SMALLEREQUAL (262) 66 88
    BIGGER (263) 67 89
    BIGGEREQUAL (264) 68 90
    KW_INT (265) 98 102 108 113 120 131
    KW_REAL (266) 99 103 109 114 119 130
    KW_STRING (267) 100 104 110 115 121 132
    KW_BOOL (268) 101 105 111 116 122 133
    KW_TRUE (269) 51 74 145
    KW_FALSE (270) 52 75 146
    KW_VAR (271) 119 120 121 122
    KW_CONST (272) 130 131 132 133
    KW_IF (273) 23 24 25
    KW_ELSE (274) 24 25
    KW_ELSE_IF (275) 35 36
    KW_FOR (276) 26 27
    KW_WHILE (277) 28
    KW_BREAK (278) 29
    KW_CONTINUE (279) 30
    KW_FUNC (280) 1 93
    KW_NIL (281)
    KW_AND (282) 60 83
    KW_OR (283) 61 84
    KW_NOT (284) 53 82
    KW_RETURN (285) 106 107
    KW_BEGIN (286) 1
    KW_VOID (287) 112
    KW_readString (288) 12
    KW_readInt (289) 13 14
    KW_readReal (290) 15 16
    KW_writeString (291) 17 18
    KW_writeInt (292) 19
    KW_writeReal (293) 20
    IDENTIFIER <crepr> (294) 12 13 14 15 16 17 31 32 42 43 44 45 46 47 69 70 92 93 98 99 100 101 102 103 104 105 125 126 142 143 144 145 146
    INTERGER_CONSTANT <integer> (295) 43 47 48 71 126 143
    FLOATING_POINT <real> (296) 49 72 142
    CONSTANT_STRING <crepr> (297) 18 50 73 144
    STARSTAR (298) 56 78


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1
        on right: 0
    decl_list <crepr> (59)
        on left: 2 3 4 5 6 7 8 9
        on right: 1
    body <crepr> (60)
        on left: 10 11
        on right: 1 11 24 25 41 93
    predefined_functions <crepr> (61)
        on left: 12 13 14 15 16 17 18 19 20
        on right: 21
    code <crepr> (62)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 11 40
    eleif <crepr> (63)
        on left: 35 36
        on right: 25 36
    call_func_var <crepr> (64)
        on left: 37 38 39
        on right: 31 32 39 92
    execution_body <crepr> (65)
        on left: 40 41
        on right: 23 24 25 26 27 28 35 36
    calculation <crepr> (66)
        on left: 42 43
        on right: 22 26 27
    calculation_not_semicolon <crepr> (67)
        on left: 44
        on right: 26 27 127
    calc <crepr> (68)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 14 16 19 20 38 39 42 43 44 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 107
    expr <crepr> (69)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 23 24 25 26 28 35 36 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    single_function <crepr> (70)
        on left: 93
        on right: 5 7 8 9
    var_func_decl <crepr> (71)
        on left: 94 95
        on right: 93
    var_func_decl_2 <crepr> (72)
        on left: 96 97
        on right: 95 97
    single_var_func_decl <crepr> (73)
        on left: 98 99 100 101 102 103 104 105
        on right: 96 97
    return_action <crepr> (74)
        on left: 106 107
        on right: 34 93
    func_type <crepr> (75)
        on left: 108 109 110 111 112 113 114 115 116
        on right: 93
    var_decl <crepr> (76)
        on left: 117 118
        on right: 4 6 8 9 33 118
    single_var_decl <crepr> (77)
        on left: 119 120 121 122
        on right: 117 118
    list_decl <crepr> (78)
        on left: 123 124
        on right: 119 120 121 122 124
    single_decl <crepr> (79)
        on left: 125 126 127
        on right: 123 124
    const_decl <crepr> (80)
        on left: 128 129
        on right: 3 6 7 9 129
    single_line_const_decl <crepr> (81)
        on left: 130 131 132 133
        on right: 128 129
    list_real_assign <crepr> (82)
        on left: 134 135
        on right: 130 135
    list_int_assign <crepr> (83)
        on left: 136 137
        on right: 131 137
    list_string_assign <crepr> (84)
        on left: 138 139
        on right: 132 139
    list_bool_assign <crepr> (85)
        on left: 140 141
        on right: 133 141
    real_assign_const <crepr> (86)
        on left: 142
        on right: 134 135
    int_assign_const <crepr> (87)
        on left: 143
        on right: 136 137
    string_assign_const <crepr> (88)
        on left: 144
        on right: 138 139
    bool_assign_const <crepr> (89)
        on left: 145 146
        on right: 140 141


State 0

    0 $accept: . program $end
    1 program: . decl_list KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    2 decl_list: . %empty  [KW_FUNC]
    3          | . const_decl
    4          | . var_decl
    5          | . single_function
    6          | . const_decl var_decl
    7          | . const_decl single_function
    8          | . var_decl single_function
    9          | . const_decl var_decl single_function
   93 single_function: . KW_FUNC IDENTIFIER '(' var_func_decl ')' func_type '{' body return_action '}' ';'
  117 var_decl: . single_var_decl
  118         | . var_decl single_var_decl
  119 single_var_decl: . KW_VAR list_decl KW_REAL ';'
  120                | . KW_VAR list_decl KW_INT ';'
  121                | . KW_VAR list_decl KW_STRING ';'
  122                | . KW_VAR list_decl KW_BOOL ';'
  128 const_decl: . single_line_const_decl
  129           | . const_decl single_line_const_decl
  130 single_line_const_decl: . KW_CONST list_real_assign KW_REAL ';'
  131                       | . KW_CONST list_int_assign KW_INT ';'
  132                       | . KW_CONST list_string_assign KW_STRING ';'
  133                       | . KW_CONST list_bool_assign KW_BOOL ';'

    KW_VAR    shift, and go to state 1
    KW_CONST  shift, and go to state 2
    KW_FUNC   shift, and go to state 3

    KW_FUNC  [reduce using rule 2 (decl_list)]

    program                 go to state 4
    decl_list               go to state 5
    single_function         go to state 6
    var_decl                go to state 7
    single_var_decl         go to state 8
    const_decl              go to state 9
    single_line_const_decl  go to state 10


State 1

   44 calculation_not_semicolon: . IDENTIFIER ASSIGN calc
  119 single_var_decl: KW_VAR . list_decl KW_REAL ';'
  120                | KW_VAR . list_decl KW_INT ';'
  121                | KW_VAR . list_decl KW_STRING ';'
  122                | KW_VAR . list_decl KW_BOOL ';'
  123 list_decl: . single_decl
  124          | . list_decl ',' single_decl
  125 single_decl: . IDENTIFIER
  126            | . IDENTIFIER '[' INTERGER_CONSTANT ']'
  127            | . calculation_not_semicolon

    IDENTIFIER  shift, and go to state 11

    calculation_not_semicolon  go to state 12
    list_decl                  go to state 13
    single_decl                go to state 14


State 2

  130 single_line_const_decl: KW_CONST . list_real_assign KW_REAL ';'
  131                       | KW_CONST . list_int_assign KW_INT ';'
  132                       | KW_CONST . list_string_assign KW_STRING ';'
  133                       | KW_CONST . list_bool_assign KW_BOOL ';'
  134 list_real_assign: . real_assign_const
  135                 | . list_real_assign ',' real_assign_const
  136 list_int_assign: . int_assign_const
  137                | . list_int_assign ',' int_assign_const
  138 list_string_assign: . string_assign_const
  139                   | . list_string_assign ',' string_assign_const
  140 list_bool_assign: . bool_assign_const
  141                 | . list_bool_assign ',' bool_assign_const
  142 real_assign_const: . IDENTIFIER ASSIGN FLOATING_POINT
  143 int_assign_const: . IDENTIFIER ASSIGN INTERGER_CONSTANT
  144 string_assign_const: . IDENTIFIER ASSIGN CONSTANT_STRING
  145 bool_assign_const: . IDENTIFIER ASSIGN KW_TRUE
  146                  | . IDENTIFIER ASSIGN KW_FALSE

    IDENTIFIER  shift, and go to state 15

    list_real_assign     go to state 16
    list_int_assign      go to state 17
    list_string_assign   go to state 18
    list_bool_assign     go to state 19
    real_assign_const    go to state 20
    int_assign_const     go to state 21
    string_assign_const  go to state 22
    bool_assign_const    go to state 23


State 3

   93 single_function: KW_FUNC . IDENTIFIER '(' var_func_decl ')' func_type '{' body return_action '}' ';'

    IDENTIFIER  shift, and go to state 24


State 4

    0 $accept: program . $end

    $end  shift, and go to state 25


State 5

    1 program: decl_list . KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'

    KW_FUNC  shift, and go to state 26


State 6

    5 decl_list: single_function .

    $default  reduce using rule 5 (decl_list)


State 7

    4 decl_list: var_decl .  [KW_FUNC]
    8          | var_decl . single_function
   93 single_function: . KW_FUNC IDENTIFIER '(' var_func_decl ')' func_type '{' body return_action '}' ';'
  118 var_decl: var_decl . single_var_decl
  119 single_var_decl: . KW_VAR list_decl KW_REAL ';'
  120                | . KW_VAR list_decl KW_INT ';'
  121                | . KW_VAR list_decl KW_STRING ';'
  122                | . KW_VAR list_decl KW_BOOL ';'

    KW_VAR   shift, and go to state 1
    KW_FUNC  shift, and go to state 3

    KW_FUNC  [reduce using rule 4 (decl_list)]

    single_function  go to state 27
    single_var_decl  go to state 28


State 8

  117 var_decl: single_var_decl .

    $default  reduce using rule 117 (var_decl)


State 9

    3 decl_list: const_decl .  [KW_FUNC]
    6          | const_decl . var_decl
    7          | const_decl . single_function
    9          | const_decl . var_decl single_function
   93 single_function: . KW_FUNC IDENTIFIER '(' var_func_decl ')' func_type '{' body return_action '}' ';'
  117 var_decl: . single_var_decl
  118         | . var_decl single_var_decl
  119 single_var_decl: . KW_VAR list_decl KW_REAL ';'
  120                | . KW_VAR list_decl KW_INT ';'
  121                | . KW_VAR list_decl KW_STRING ';'
  122                | . KW_VAR list_decl KW_BOOL ';'
  129 const_decl: const_decl . single_line_const_decl
  130 single_line_const_decl: . KW_CONST list_real_assign KW_REAL ';'
  131                       | . KW_CONST list_int_assign KW_INT ';'
  132                       | . KW_CONST list_string_assign KW_STRING ';'
  133                       | . KW_CONST list_bool_assign KW_BOOL ';'

    KW_VAR    shift, and go to state 1
    KW_CONST  shift, and go to state 2
    KW_FUNC   shift, and go to state 3

    KW_FUNC  [reduce using rule 3 (decl_list)]

    single_function         go to state 29
    var_decl                go to state 30
    single_var_decl         go to state 8
    single_line_const_decl  go to state 31


State 10

  128 const_decl: single_line_const_decl .

    $default  reduce using rule 128 (const_decl)


State 11

   44 calculation_not_semicolon: IDENTIFIER . ASSIGN calc
  125 single_decl: IDENTIFIER .  [KW_INT, KW_REAL, KW_STRING, KW_BOOL, ',']
  126            | IDENTIFIER . '[' INTERGER_CONSTANT ']'

    ASSIGN  shift, and go to state 32
    '['     shift, and go to state 33

    $default  reduce using rule 125 (single_decl)


State 12

  127 single_decl: calculation_not_semicolon .

    $default  reduce using rule 127 (single_decl)


State 13

  119 single_var_decl: KW_VAR list_decl . KW_REAL ';'
  120                | KW_VAR list_decl . KW_INT ';'
  121                | KW_VAR list_decl . KW_STRING ';'
  122                | KW_VAR list_decl . KW_BOOL ';'
  124 list_decl: list_decl . ',' single_decl

    KW_INT     shift, and go to state 34
    KW_REAL    shift, and go to state 35
    KW_STRING  shift, and go to state 36
    KW_BOOL    shift, and go to state 37
    ','        shift, and go to state 38


State 14

  123 list_decl: single_decl .

    $default  reduce using rule 123 (list_decl)


State 15

  142 real_assign_const: IDENTIFIER . ASSIGN FLOATING_POINT
  143 int_assign_const: IDENTIFIER . ASSIGN INTERGER_CONSTANT
  144 string_assign_const: IDENTIFIER . ASSIGN CONSTANT_STRING
  145 bool_assign_const: IDENTIFIER . ASSIGN KW_TRUE
  146                  | IDENTIFIER . ASSIGN KW_FALSE

    ASSIGN  shift, and go to state 39


State 16

  130 single_line_const_decl: KW_CONST list_real_assign . KW_REAL ';'
  135 list_real_assign: list_real_assign . ',' real_assign_const

    KW_REAL  shift, and go to state 40
    ','      shift, and go to state 41


State 17

  131 single_line_const_decl: KW_CONST list_int_assign . KW_INT ';'
  137 list_int_assign: list_int_assign . ',' int_assign_const

    KW_INT  shift, and go to state 42
    ','     shift, and go to state 43


State 18

  132 single_line_const_decl: KW_CONST list_string_assign . KW_STRING ';'
  139 list_string_assign: list_string_assign . ',' string_assign_const

    KW_STRING  shift, and go to state 44
    ','        shift, and go to state 45


State 19

  133 single_line_const_decl: KW_CONST list_bool_assign . KW_BOOL ';'
  141 list_bool_assign: list_bool_assign . ',' bool_assign_const

    KW_BOOL  shift, and go to state 46
    ','      shift, and go to state 47


State 20

  134 list_real_assign: real_assign_const .

    $default  reduce using rule 134 (list_real_assign)


State 21

  136 list_int_assign: int_assign_const .

    $default  reduce using rule 136 (list_int_assign)


State 22

  138 list_string_assign: string_assign_const .

    $default  reduce using rule 138 (list_string_assign)


State 23

  140 list_bool_assign: bool_assign_const .

    $default  reduce using rule 140 (list_bool_assign)


State 24

   93 single_function: KW_FUNC IDENTIFIER . '(' var_func_decl ')' func_type '{' body return_action '}' ';'

    '('  shift, and go to state 48


State 25

    0 $accept: program $end .

    $default  accept


State 26

    1 program: decl_list KW_FUNC . KW_BEGIN '(' ')' '{' body '}' ';'

    KW_BEGIN  shift, and go to state 49


State 27

    8 decl_list: var_decl single_function .

    $default  reduce using rule 8 (decl_list)


State 28

  118 var_decl: var_decl single_var_decl .

    $default  reduce using rule 118 (var_decl)


State 29

    7 decl_list: const_decl single_function .

    $default  reduce using rule 7 (decl_list)


State 30

    6 decl_list: const_decl var_decl .  [KW_FUNC]
    9          | const_decl var_decl . single_function
   93 single_function: . KW_FUNC IDENTIFIER '(' var_func_decl ')' func_type '{' body return_action '}' ';'
  118 var_decl: var_decl . single_var_decl
  119 single_var_decl: . KW_VAR list_decl KW_REAL ';'
  120                | . KW_VAR list_decl KW_INT ';'
  121                | . KW_VAR list_decl KW_STRING ';'
  122                | . KW_VAR list_decl KW_BOOL ';'

    KW_VAR   shift, and go to state 1
    KW_FUNC  shift, and go to state 3

    KW_FUNC  [reduce using rule 6 (decl_list)]

    single_function  go to state 50
    single_var_decl  go to state 28


State 31

  129 const_decl: const_decl single_line_const_decl .

    $default  reduce using rule 129 (const_decl)


State 32

   44 calculation_not_semicolon: IDENTIFIER ASSIGN . calc
   45 calc: . IDENTIFIER
   46     | . '-' IDENTIFIER
   47     | . IDENTIFIER '[' INTERGER_CONSTANT ']'
   48     | . INTERGER_CONSTANT
   49     | . FLOATING_POINT
   50     | . CONSTANT_STRING
   51     | . KW_TRUE
   52     | . KW_FALSE
   53     | . KW_NOT calc
   54     | . calc '+' calc
   55     | . calc '-' calc
   56     | . calc STARSTAR calc
   57     | . calc '*' calc
   58     | . calc '/' calc
   59     | . calc '%' calc
   60     | . calc KW_AND calc
   61     | . calc KW_OR calc
   62     | . '(' calc ')'
   63     | . calc ASSIGNASSIGN calc
   64     | . calc NOTEQUAL calc
   65     | . calc SMALLER calc
   66     | . calc SMALLEREQUAL calc
   67     | . calc BIGGER calc
   68     | . calc BIGGEREQUAL calc

    KW_TRUE            shift, and go to state 51
    KW_FALSE           shift, and go to state 52
    KW_NOT             shift, and go to state 53
    IDENTIFIER         shift, and go to state 54
    INTERGER_CONSTANT  shift, and go to state 55
    FLOATING_POINT     shift, and go to state 56
    CONSTANT_STRING    shift, and go to state 57
    '-'                shift, and go to state 58
    '('                shift, and go to state 59

    calc  go to state 60


State 33

  126 single_decl: IDENTIFIER '[' . INTERGER_CONSTANT ']'

    INTERGER_CONSTANT  shift, and go to state 61


State 34

  120 single_var_decl: KW_VAR list_decl KW_INT . ';'

    ';'  shift, and go to state 62


State 35

  119 single_var_decl: KW_VAR list_decl KW_REAL . ';'

    ';'  shift, and go to state 63


State 36

  121 single_var_decl: KW_VAR list_decl KW_STRING . ';'

    ';'  shift, and go to state 64


State 37

  122 single_var_decl: KW_VAR list_decl KW_BOOL . ';'

    ';'  shift, and go to state 65


State 38

   44 calculation_not_semicolon: . IDENTIFIER ASSIGN calc
  124 list_decl: list_decl ',' . single_decl
  125 single_decl: . IDENTIFIER
  126            | . IDENTIFIER '[' INTERGER_CONSTANT ']'
  127            | . calculation_not_semicolon

    IDENTIFIER  shift, and go to state 11

    calculation_not_semicolon  go to state 12
    single_decl                go to state 66


State 39

  142 real_assign_const: IDENTIFIER ASSIGN . FLOATING_POINT
  143 int_assign_const: IDENTIFIER ASSIGN . INTERGER_CONSTANT
  144 string_assign_const: IDENTIFIER ASSIGN . CONSTANT_STRING
  145 bool_assign_const: IDENTIFIER ASSIGN . KW_TRUE
  146                  | IDENTIFIER ASSIGN . KW_FALSE

    KW_TRUE            shift, and go to state 67
    KW_FALSE           shift, and go to state 68
    INTERGER_CONSTANT  shift, and go to state 69
    FLOATING_POINT     shift, and go to state 70
    CONSTANT_STRING    shift, and go to state 71


State 40

  130 single_line_const_decl: KW_CONST list_real_assign KW_REAL . ';'

    ';'  shift, and go to state 72


State 41

  135 list_real_assign: list_real_assign ',' . real_assign_const
  142 real_assign_const: . IDENTIFIER ASSIGN FLOATING_POINT

    IDENTIFIER  shift, and go to state 73

    real_assign_const  go to state 74


State 42

  131 single_line_const_decl: KW_CONST list_int_assign KW_INT . ';'

    ';'  shift, and go to state 75


State 43

  137 list_int_assign: list_int_assign ',' . int_assign_const
  143 int_assign_const: . IDENTIFIER ASSIGN INTERGER_CONSTANT

    IDENTIFIER  shift, and go to state 76

    int_assign_const  go to state 77


State 44

  132 single_line_const_decl: KW_CONST list_string_assign KW_STRING . ';'

    ';'  shift, and go to state 78


State 45

  139 list_string_assign: list_string_assign ',' . string_assign_const
  144 string_assign_const: . IDENTIFIER ASSIGN CONSTANT_STRING

    IDENTIFIER  shift, and go to state 79

    string_assign_const  go to state 80


State 46

  133 single_line_const_decl: KW_CONST list_bool_assign KW_BOOL . ';'

    ';'  shift, and go to state 81


State 47

  141 list_bool_assign: list_bool_assign ',' . bool_assign_const
  145 bool_assign_const: . IDENTIFIER ASSIGN KW_TRUE
  146                  | . IDENTIFIER ASSIGN KW_FALSE

    IDENTIFIER  shift, and go to state 82

    bool_assign_const  go to state 83


State 48

   93 single_function: KW_FUNC IDENTIFIER '(' . var_func_decl ')' func_type '{' body return_action '}' ';'
   94 var_func_decl: . %empty  [')']
   95              | . var_func_decl_2
   96 var_func_decl_2: . single_var_func_decl
   97                | . var_func_decl_2 ',' single_var_func_decl
   98 single_var_func_decl: . IDENTIFIER KW_INT
   99                     | . IDENTIFIER KW_REAL
  100                     | . IDENTIFIER KW_STRING
  101                     | . IDENTIFIER KW_BOOL
  102                     | . IDENTIFIER '[' ']' KW_INT
  103                     | . IDENTIFIER '[' ']' KW_REAL
  104                     | . IDENTIFIER '[' ']' KW_STRING
  105                     | . IDENTIFIER '[' ']' KW_BOOL

    IDENTIFIER  shift, and go to state 84

    $default  reduce using rule 94 (var_func_decl)

    var_func_decl         go to state 85
    var_func_decl_2       go to state 86
    single_var_func_decl  go to state 87


State 49

    1 program: decl_list KW_FUNC KW_BEGIN . '(' ')' '{' body '}' ';'

    '('  shift, and go to state 88


State 50

    9 decl_list: const_decl var_decl single_function .

    $default  reduce using rule 9 (decl_list)


State 51

   51 calc: KW_TRUE .

    $default  reduce using rule 51 (calc)


State 52

   52 calc: KW_FALSE .

    $default  reduce using rule 52 (calc)


State 53

   45 calc: . IDENTIFIER
   46     | . '-' IDENTIFIER
   47     | . IDENTIFIER '[' INTERGER_CONSTANT ']'
   48     | . INTERGER_CONSTANT
   49     | . FLOATING_POINT
   50     | . CONSTANT_STRING
   51     | . KW_TRUE
   52     | . KW_FALSE
   53     | . KW_NOT calc
   53     | KW_NOT . calc
   54     | . calc '+' calc
   55     | . calc '-' calc
   56     | . calc STARSTAR calc
   57     | . calc '*' calc
   58     | . calc '/' calc
   59     | . calc '%' calc
   60     | . calc KW_AND calc
   61     | . calc KW_OR calc
   62     | . '(' calc ')'
   63     | . calc ASSIGNASSIGN calc
   64     | . calc NOTEQUAL calc
   65     | . calc SMALLER calc
   66     | . calc SMALLEREQUAL calc
   67     | . calc BIGGER calc
   68     | . calc BIGGEREQUAL calc

    KW_TRUE            shift, and go to state 51
    KW_FALSE           shift, and go to state 52
    KW_NOT             shift, and go to state 53
    IDENTIFIER         shift, and go to state 54
    INTERGER_CONSTANT  shift, and go to state 55
    FLOATING_POINT     shift, and go to state 56
    CONSTANT_STRING    shift, and go to state 57
    '-'                shift, and go to state 58
    '('                shift, and go to state 59

    calc  go to state 89


State 54

   45 calc: IDENTIFIER .  [ASSIGNASSIGN, NOTEQUAL, SMALLER, SMALLEREQUAL, BIGGER, BIGGEREQUAL, KW_INT, KW_REAL, KW_STRING, KW_BOOL, KW_AND, KW_OR, '-', '+', '*', '/', '%', STARSTAR, ')', ';', ']', ',']
   47     | IDENTIFIER . '[' INTERGER_CONSTANT ']'

    '['  shift, and go to state 90

    $default  reduce using rule 45 (calc)


State 55

   48 calc: INTERGER_CONSTANT .

    $default  reduce using rule 48 (calc)


State 56

   49 calc: FLOATING_POINT .

    $default  reduce using rule 49 (calc)


State 57

   50 calc: CONSTANT_STRING .

    $default  reduce using rule 50 (calc)


State 58

   46 calc: '-' . IDENTIFIER

    IDENTIFIER  shift, and go to state 91


State 59
